VarHandle string encoder (#7701)